--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "vite-plugin-commonjs": "^0.10.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
