--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.16",
     "vite-plugin-commonjs": "^0.10.4"
   },
   "devDependencies": {
